# embedded-config-manager

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  main.py  service.py
agent/api/: routes.py
agent/apply/: engine.py
agent/core/: errors.py  models.py  settings.py
agent/diff/: engine.py
agent/exporters/: jinja.py
agent/storage/: revisions.py
agent/validation/: engine.py
examples/: config.example.json  targets.json
schemas/: network.schema.json  system.schema.json  telemetry.schema.json
scripts/: run-dev.sh  seed-example.sh
systemd/: embedded-config-manager.service
templates/env/: network.env.j2  telemetry.env.j2
tests/: conftest.py  test_api.py  test_apply.py  test_diff.py  test_revisions.py  test_validation.py
